--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/eosus_logo.svg" />
     <link href='https://api.mapbox.com/mapbox-gl-js/v3.15.0/mapbox-gl.css' rel='stylesheet' />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Eosus</title>
+    <title>Eosus: Natural Disaster Awareness</title>
   </head>
   <body class="overflow-hidden overflow-y-auto bg-body">
     <div id="root"></div>
